#233 introduce struts weblegacy (1.5.0_RC1)