@@ -19,9 +19,9 @@
     <maven.build.timestamp.format>dd.MM.yyyy HH:mm</maven.build.timestamp.format>
     <java.version>21</java.version>
     <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
-    <mapstruct-processor.version>1.5.5.Final</mapstruct-processor.version>
+    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
     <lombok.version>1.18.30</lombok.version>
-    <hibernate-jpamodelgen.version>6.1.7.Final</hibernate-jpamodelgen.version>
+    <hibernate-jpamodelgen.version>6.4.4.Final</hibernate-jpamodelgen.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
   </properties>
 
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -105,32 +105,22 @@
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>6.4.1.Final</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- struts -->
     <dependency>
-      <groupId>org.apache.struts</groupId>
+      <groupId>io.github.weblegacy</groupId>
       <artifactId>struts-core</artifactId>
-      <version>1.3.10</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>antlr</artifactId>
-          <groupId>antlr</groupId>
-        </exclusion>
-      </exclusions>
+      <version>1.5.0-RC1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.struts</groupId>
+      <groupId>io.github.weblegacy</groupId>
       <artifactId>struts-el</artifactId>
-      <version>1.3.10</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>antlr</artifactId>
-          <groupId>antlr</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>standard</artifactId>
-          <groupId>taglibs</groupId>
-        </exclusion>
-      </exclusions>
+      <version>1.5.0-RC1</version>
     </dependency>
     <!-- other stuff -->
     <dependency>
@@ -215,7 +205,7 @@
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
-      <version>${mapstruct-processor.version}</version>
+      <version>${org.mapstruct.version}</version>
     </dependency>
   </dependencies>
 
@@ -249,6 +239,7 @@
           <offline>true</offline>
         </configuration>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -266,40 +257,30 @@
           </execution>
         </executions>
       </plugin>
+      -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <!-- References to interface static methods are allowed only at source level 1.8 or above -->
         <configuration>
-          <annotationProcessorPaths>
-            <path>
-              <groupId>org.mapstruct</groupId>
-              <artifactId>mapstruct-processor</artifactId>
-              <version>${mapstruct-processor.version}</version>
-            </path>
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </path>
-            <path>
-              <groupId>org.hibernate.orm</groupId>
-              <artifactId>hibernate-jpamodelgen</artifactId>
-              <version>${hibernate-jpamodelgen.version}</version>
-            </path>
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok-mapstruct-binding</artifactId>
-              <version>${lombok-mapstruct-binding.version}</version>
-            </path>
-          </annotationProcessorPaths>
+          <compilerArgs>
+            <compilerArg>-proc:full</compilerArg>
+            <compilerArg>-Xlint</compilerArg>
+            <!--
+            <compilerArg>-Xdiags:verbose</compilerArg>
+            <compilerArg>-verbose</compilerArg>
+            <compilerArg>-XprintRounds</compilerArg>
+            <compilerArg>-XprintProcessorInfo</compilerArg>
+            <compilerArg>-J-verbose</compilerArg>
+            -->
+          </compilerArgs>
           <release>${java.version}</release>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dspring.profiles.active=test</argLine>
+          <argLine>-Dspring.profiles.active=unittest</argLine>
         </configuration>
       </plugin>
     </plugins>
